--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "jaccard",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Jaccard Index Javascript Library",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./example/index.ts"
   },
   "keywords": [
     "jaccard",
